--- a/gatitobook/src/app/home/login/login.component.html
+++ b/gatitobook/src/app/home/login/login.component.html
@@ -1,13 +1,19 @@
 <h4 class="text-center">Login</h4>
 
-<form class="form mt-4" (ngSubmit)="login()">
+<form class="form mt-4" (ngSubmit)="login()" #loginForm="ngForm">
   <div class="form-group">
     <input
       type="text"
       class="form-control"
       placeholder="Usuário"
       [(ngModel)]="usuario"
-      name="usuario">
+      name="usuario"
+      #campoUsuario="ngModel"
+      required
+      >
+      <app-mensagem
+        *ngIf="campoUsuario.invalid && campoUsuario.touched"
+        mensagem="Campo Obrigatório!" ></app-mensagem>
   </div>
 
   <div class="form-group">
@@ -16,8 +22,14 @@
       class="form-control"
       placeholder="Senha"
       [(ngModel)]="senha"
-      name="senha">
+      name="senha"
+      #campoSenha="ngModel"
+      required
+      >
+      <app-mensagem
+        *ngIf="campoSenha.invalid && campoSenha.touched"
+        mensagem="Campo Obrigatório!" ></app-mensagem>
   </div>
 
-  <button type="submit" class="btn btn-primary btn-block">Login</button>
+  <button type="submit" class="btn btn-primary btn-block" [disabled]="loginForm.invalid">Login</button>
 </form>
