Passando dados novo usuario form reativo

--- a/gatitobook/src/app/home/login/login.component.html
+++ b/gatitobook/src/app/home/login/login.component.html
@@ -33,3 +33,4 @@
 
   <button type="submit" class="btn btn-primary btn-block" [disabled]="loginForm.invalid">Login</button>
 </form>
+<p>Não é usuário?<a [routerLink]="['novousuario']"> Cadastre-se!</a></p>
