Editando texto tela novo usuario

--- a/gatitobook/src/app/home/novo-usuario/novo-usuario.component.html
+++ b/gatitobook/src/app/home/novo-usuario/novo-usuario.component.html
@@ -30,7 +30,7 @@
       formControlName="password">
   </div>
   <p>Já é usuário?<a [routerLink]="['']"> Login</a></p>
-<button class="btn btn-primary btn-lock" type="submit">Cadastro</button>
+<button class="btn btn-primary btn-lock" type="submit">Cadastre-se</button>
 </form>
 
 
