--- a/gatitobook/src/app/home/novo-usuario/novo-usuario.component.html
+++ b/gatitobook/src/app/home/novo-usuario/novo-usuario.component.html
@@ -7,6 +7,15 @@
      type="text"
      class="form-control"
      formControlName="email">
+     <app-mensagem
+      *ngIf="novoUsuarioForm.get('email')?.errors?.required && novoUsuarioForm.get('email')?.touched"
+      mensagem="Email obrigatório!">
+    </app-mensagem>
+    <app-mensagem
+      *ngIf="novoUsuarioForm.get('email')?.errors?.email && novoUsuarioForm.get('email')?.touched"
+      mensagem="Email inválido!">
+
+    </app-mensagem>
   </div>
   <div class="form-group">
     <input
@@ -14,6 +23,11 @@
       type="text"
       class="form-control"
       formControlName="fullName">
+    <app-mensagem
+      *ngIf="novoUsuarioForm.get('fullName')?.errors && novoUsuarioForm.get('fullName')?.touched"
+      mensagem="Nome incorreto!">
+
+    </app-mensagem>
   </div>
   <div class="form-group">
     <input
