Add validações customizadas

--- a/gatitobook/src/app/home/novo-usuario/novo-usuario.component.html
+++ b/gatitobook/src/app/home/novo-usuario/novo-usuario.component.html
@@ -35,6 +35,11 @@
       type="text"
       class="form-control"
       formControlName="userName">
+    <app-mensagem
+      *ngIf="novoUsuarioForm.get('userName')?.errors?.minusculo && novoUsuarioForm.get('userName')?.touched"
+      mensagem="Somente letras minúsculas!">
+
+    </app-mensagem>
   </div>
   <div class="form-group">
     <input
