Add validacao de formulario

--- a/gatitobook/src/app/home/novo-usuario/novo-usuario.component.html
+++ b/gatitobook/src/app/home/novo-usuario/novo-usuario.component.html
@@ -42,7 +42,6 @@
     <app-mensagem
       *ngIf="novoUsuarioForm.get('userName')?.errors?.usuarioExistente"
       mensagem="Nome de usuário indisponível!">
-
     </app-mensagem>
   </div>
   <div class="form-group">
@@ -51,6 +50,10 @@
       type="password"
       class="form-control"
       formControlName="password">
+    <app-mensagem
+      *ngIf="novoUsuarioForm.errors?.senhaIgualUsuario"
+      mensagem="Senha deve ser diferente do usuário!">
+    </app-mensagem>
   </div>
   <p>Já é usuário?<a [routerLink]="['']"> Login</a></p>
 <button class="btn btn-primary btn-lock" type="submit">Cadastre-se</button>
