--- a/gatitobook/src/app/componentes/cabecalho/cabecalho.component.html
+++ b/gatitobook/src/app/componentes/cabecalho/cabecalho.component.html
@@ -5,7 +5,7 @@
       <div *ngIf="user.name; else login">
         <i class="fa fa-user-circle mr-1"></i>
         <a class="mr-1">{{ user.name }}</a>
-        <a (click)="logout()">Logout</a>
+        <a (click)="logout()">Sair</a>
       </div>
     </div>
   </nav>
